--- a/tools/data_retriever/package.json
+++ b/tools/data_retriever/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "six-fold.shortest-route",
+    "name": "data_retriever",
     "version": "1.0.0",
     "description": "",
     "main": "./dist/index.js",
@@ -10,10 +10,8 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "express": "4.17.1"
-    },
-    "devDependencies": {
-        "@types/express": "4.17.11",
+        "axios": "0.21.1",
+        "csv-parse": "4.15.3",
         "typescript": "4.2.3"
     }
 }
