--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "main": "./dist/index.js",
     "scripts": {
         "build": "tsc",
-        "start": "tsc && node ."
+        "start": "ts-node src/index.ts",
+        "test": "mocha -r ts-node/register -r reflect-metadata test/**/*.test.ts"
     },
     "author": "",
     "license": "ISC",
@@ -16,6 +17,12 @@
     },
     "devDependencies": {
         "@types/express": "4.17.11",
+        "@types/mocha": "8.2.2",
+        "@types/sinon": "9.0.11",
+        "mocha": "8.3.2",
+        "should": "13.2.3",
+        "sinon": "10.0.0",
+        "ts-node": "9.1.1",
         "typescript": "4.2.3"
     }
 }
