--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@types/chai": "^4.2.16",
         "express": "4.17.1",
         "reflect-metadata": "0.1.13",
         "tsyringe": "4.5.0"
@@ -19,8 +20,8 @@
         "@types/express": "4.17.11",
         "@types/mocha": "8.2.2",
         "@types/sinon": "9.0.11",
+        "chai": "4.3.4",
         "mocha": "8.3.2",
-        "should": "13.2.3",
         "sinon": "10.0.0",
         "ts-node": "9.1.1",
         "typescript": "4.2.3"
