--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,26 +8,19 @@
             "type": "pwa-node",
             "request": "launch",
             "name": "Debug: Server",
-            "skipFiles": [
-                "<node_internals>/**"
-            ],
-            "program": "${workspaceFolder}\\dist\\index.js",
-            "outFiles": [
-                "${workspaceFolder}/**/*.js"
-            ]
+            "skipFiles": ["<node_internals>/**"],
+            "preLaunchTask": "build",
+            "program": "${workspaceFolder}\\dist\\src\\index.js",
+            "outFiles": ["${workspaceFolder}/**/*.js"]
         },
         {
             "type": "pwa-node",
             "request": "launch",
             "name": "Debug: Data Retriever",
-            "skipFiles": [
-                "<node_internals>/**"
-            ],
+            "skipFiles": ["<node_internals>/**"],
             "preLaunchTask": "build",
             "program": "${workspaceFolder}\\tools\\data_retriever\\dist\\index.js",
-            "outFiles": [
-                "${workspaceFolder}/**/*.js"
-            ]
+            "outFiles": ["${workspaceFolder}/**/*.js"]
         }
     ]
 }
