--- a/package.json
+++ b/package.json
@@ -11,19 +11,19 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "@types/chai": "^4.2.16",
         "express": "4.17.1",
         "reflect-metadata": "0.1.13",
-        "tsyringe": "4.5.0"
+        "tsyringe": "4.6.0"
     },
     "devDependencies": {
-        "@types/express": "4.17.11",
-        "@types/mocha": "8.2.2",
-        "@types/sinon": "9.0.11",
+        "@types/chai": "4.2.22",
+        "@types/express": "4.17.13",
+        "@types/mocha": "9.0.0",
+        "@types/sinon": "10.0.3",
         "chai": "4.3.4",
-        "mocha": "8.3.2",
-        "sinon": "10.0.0",
-        "ts-node": "9.1.1",
-        "typescript": "4.2.3"
+        "mocha": "9.1.1",
+        "sinon": "11.1.2",
+        "ts-node": "10.2.1",
+        "typescript": "4.4.3"
     }
 }
