--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "main": "./dist/index.js",
     "scripts": {
         "build": "tsc",
+        "prettify": "prettier --write .",
         "start": "ts-node src/index.ts",
         "test": "mocha -r ts-node/register -r reflect-metadata test/**/*.test.ts"
     },
@@ -22,6 +23,7 @@
         "@types/sinon": "10.0.3",
         "chai": "4.3.4",
         "mocha": "9.1.1",
+        "prettier": "2.4.1",
         "sinon": "11.1.2",
         "ts-node": "10.2.1",
         "typescript": "4.4.3"
