--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
         "build": "tsc",
         "prettify": "prettier --write .",
         "start": "ts-node src/index.ts",
-        "test": "mocha -r ts-node/register -r reflect-metadata test/**/*.test.ts"
+        "test": "mocha -r ts-node/register -r reflect-metadata test/**/*.test.ts",
+        "prepare": "husky install",
+        "pre-commit": "pretty-quick --staged"
     },
     "author": "",
     "license": "ISC",
@@ -22,8 +24,10 @@
         "@types/mocha": "9.0.0",
         "@types/sinon": "10.0.3",
         "chai": "4.3.4",
+        "husky": "7.0.2",
         "mocha": "9.1.1",
         "prettier": "2.4.1",
+        "pretty-quick": "3.1.1",
         "sinon": "11.1.2",
         "ts-node": "10.2.1",
         "typescript": "4.4.3"
